--- a/ETopo/ETopo.csproj
+++ b/ETopo/ETopo.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DPoint.cs" />
+    <Compile Include="EditPoint.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
