--- a/ETopo/ETopo.csproj
+++ b/ETopo/ETopo.csproj
@@ -75,10 +75,12 @@
     <Compile Include="Graph.Designer.cs">
       <DependentUpon>Graph.cs</DependentUpon>
     </Compile>
+    <Compile Include="MathConst.cs" />
     <Compile Include="Piquet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quad.cs" />
+    <Compile Include="Ring.cs" />
     <Compile Include="SimpleOpenGlControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
