--- a/ETopo/ETopo.csproj
+++ b/ETopo/ETopo.csproj
@@ -63,11 +63,11 @@
   <ItemGroup>
     <Compile Include="DPoint.cs" />
     <Compile Include="EditPoint.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="FrMain.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FrMain.Designer.cs">
+      <DependentUpon>FrMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Graph.cs">
       <SubType>Form</SubType>
@@ -95,8 +95,8 @@
     <Compile Include="Point.cs" />
     <Compile Include="Trace.cs" />
     <Compile Include="Vector.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FrMain.resx">
+      <DependentUpon>FrMain.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Graph.resx">
       <DependentUpon>Graph.cs</DependentUpon>
