--- a/ETopo/ETopo.csproj
+++ b/ETopo/ETopo.csproj
@@ -75,6 +75,9 @@
     <Reference Include="Ionic.Zip">
       <HintPath>.\Ionic.Zip.dll</HintPath>
     </Reference>
+    <Reference Include="itextsharp">
+      <HintPath>..\packages\izenda.itextsharp.4.0.3.0\lib\net20\itextsharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -102,6 +105,12 @@
     <Compile Include="Cgn.cs" />
     <Compile Include="DPoint.cs" />
     <Compile Include="EditPoint.cs" />
+    <Compile Include="FrDrawing.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrDrawing.Designer.cs">
+      <DependentUpon>FrDrawing.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -133,6 +142,9 @@
     <Compile Include="Point.cs" />
     <Compile Include="Trace.cs" />
     <Compile Include="Vector.cs" />
+    <EmbeddedResource Include="FrDrawing.resx">
+      <DependentUpon>FrDrawing.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrMain.resx">
       <DependentUpon>FrMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -153,6 +165,7 @@
       <DependentUpon>TopoData.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="ETopo_TemporaryKey.pfx" />
+    <None Include="packages.config" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
