--- a/ETopo/ETopo.csproj
+++ b/ETopo/ETopo.csproj
@@ -105,12 +105,6 @@
     <Compile Include="Cgn.cs" />
     <Compile Include="DPoint.cs" />
     <Compile Include="EditPoint.cs" />
-    <Compile Include="FrDrawing.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FrDrawing.Designer.cs">
-      <DependentUpon>FrDrawing.cs</DependentUpon>
-    </Compile>
     <Compile Include="FrMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -132,6 +126,7 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Spline.cs" />
+    <Compile Include="SurveyData.cs" />
     <Compile Include="TopoData.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -142,9 +137,6 @@
     <Compile Include="Point.cs" />
     <Compile Include="Trace.cs" />
     <Compile Include="Vector.cs" />
-    <EmbeddedResource Include="FrDrawing.resx">
-      <DependentUpon>FrDrawing.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="FrMain.resx">
       <DependentUpon>FrMain.cs</DependentUpon>
     </EmbeddedResource>
